Basics Data Structure of python Complete upto Set

--- a/day2.ipynb
+++ b/day2.ipynb
@@ -557,19 +557,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is 0\n"
+     ]
+    }
+   ],
    "source": [
-    "3 min break "
+    "num = int(input())\n",
+    "if (num > 0):\n",
+    "    print(\"+ve number \" )\n",
+    "elif (num< 0 ):\n",
+    "    print(\"-ve number\")\n",
+    "else:\n",
+    "    print(\"number is 0\")\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the 1st no:- 12\n",
+      "enter the 2nd no:-  12\n",
+      "enter the 3rd no:-  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all r same \n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"enter the 1st no:-\" ))\n",
+    "b=int(input(\"enter the 2nd no:- \"))\n",
+    "c=int(input(\"enter the 3rd no:- \"))\n",
+    "\n",
+    "if a>b and a>c:\n",
+    "        print(\"a is greatest: \")\n",
+    "elif b>c:\n",
+    "     print(\"b is greatest\")\n",
+    "elif c>b:\n",
+    "    print(\"c is greatest\")\n",
+    "else:\n",
+    "     print(\"all r same \")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -694,16 +746,48 @@
     "- It excite a sequence of statement multiple time and appropriate the code that manages the loop variable.\n",
     "\n",
     "- While expression:\n",
-    " Statement \n",
-    "   Body / suite \n"
+    " - Statement \n",
+    "  - Body / suite \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter n  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"enter n \" ))\n",
+    "i = 1\n",
+    "while(i<=a):\n",
+    "    \n",
+    "    print(i)\n",
+    "    i+=1\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
