--- a/day3.ipynb
+++ b/day3.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter n  3\n"
+      "enter n  2\n"
      ]
     },
     {
@@ -46,20 +46,27 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "3\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "a=int(input(\"enter n \" ))\n",
-    "i = 1\n",
+    "\n",
+    "i = 1 ## inilisation \n",
     "while(i<=a):\n",
-    "    \n",
     "    print(i)\n",
     "    i+=1\n",
-    " "
+    "\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -101,6 +108,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2 3 5 8 13 21 34 55 89 "
+     ]
+    }
+   ],
+   "source": [
+    "a = 0 \n",
+    "b = 1 \n",
+    "n = 10\n",
+    "i = 1 \n",
+    "print(a , b )\n",
+    "while(i<=n):\n",
+    "    c=a+b\n",
+    "    print(c , end=\" \")\n",
+    "    a=b\n",
+    "    b=c\n",
+    "    i+=1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,7 +172,6 @@
     }
    ],
    "source": [
-    "  \n",
     "a=0\n",
     "b=1\n",
     "n=int(input(\"enter the  no:- \"))\n",
@@ -154,22 +195,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter 1st no  12\n",
-      "Enter 2nd number  13\n"
+      "Enter 1st no  12 \n",
+      "Enter 2nd number  15\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 12\n"
+      "15 12\n"
      ]
     }
    ],
@@ -219,10 +260,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 \n",
+      "1 1 1 \n",
+      "2 2 2 \n",
+      "3 3 3 \n"
+     ]
+    }
+   ],
+   "source": [
+    "### 2 - loop \n",
+    "i = 0\n",
+    "m = 4 \n",
+    "n = 3\n",
+    "while(i<m):\n",
+    "    j=0\n",
+    "    while(j<n):\n",
+    "        print(i , end= \" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,29 +296,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter the  no:-  2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 \n",
-      "1.6936347484588623\n"
-     ]
-    }
-   ],
    "source": [
-    "import time\n",
-    "start = time.time()\n",
+    "\n",
     "a=0\n",
     "b=1\n",
     "n=int(input(\"enter the  no:- \"))\n",
@@ -262,10 +307,7 @@
     "while  flag<n:\n",
     "    print(a,end=\" \")\n",
     "    a,b=b,a+b\n",
-    "    flag+=1\n",
-    "end = time.time()\n",
-    "print()\n",
-    "print((end-start))"
+    "    flag+=1\n"
    ]
   },
   {
@@ -630,6 +672,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0 1 1 2 3 5 8 13 \n",
+    "            a b c "
+   ]
   }
  ],
  "metadata": {
