while loop for loop

--- a/basic_question_on_python.ipynb
+++ b/basic_question_on_python.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- WAP to replace all the occurences  of alphabet 'a' with '$' in the string\n",
+    "- WAP to replace all the occurences  of alphabet 'a' with '$' in the string [ input --> adnan , output-->$dn$n ] \n",
     "- WAP to delect if two strings are in anagrams\n",
     "- WAP to count a no of vowels in a str\n",
     "- WAP to form a new str where the 1st chara and the last chara have been exchanged\n",
