--- a/day3.ipynb
+++ b/day3.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter n  2\n"
+      "enter n  3\n"
      ]
     },
     {
@@ -46,7 +46,8 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n"
+      "2\n",
+      "3\n"
      ]
     }
    ],
@@ -285,7 +286,7 @@
     "        print(i , end= \" \")\n",
     "        j+=1\n",
     "    print()\n",
-    "    i+=1\n"
+    "    i+=1"
    ]
   },
   {
@@ -314,12 +315,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- write a program  to append the square in the list"
+    "- write a program  to append the square in the list -->    [1 , 4 , 9 , 16  , 25 ,..n ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -333,19 +334,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100] <class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "a=0\n",
-    "n=int(input(\"enter the  no:- \"))\n",
-    "c=[]\n",
-    "flag=1\n",
-    "while  flag<11:    \n",
-    "    c.append(flag*flag)\n",
-    "    flag+=1  \n",
-    "print(c)"
+    "n =int(input(\"enter the  no:- \"))\n",
+    "square_list = []\n",
+    "i = 1 \n",
+    "while( i <=n):\n",
+    "    #print(i*i   , end = \"  \")\n",
+    "    square_list.append(i*i)\n",
+    "    i+=1\n",
+    "print(square_list , type(square_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the  no:-  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "n =int(input(\"enter the  no:- \"))\n",
+    "square_dict = {}\n",
+    "i = 1 \n",
+    "while( i <=n):\n",
+    "    square_dict[i]  = i*i \n",
+    "    i+=1\n",
+    "print(square_dict , type(square_dict))"
    ]
   },
   {
@@ -353,11 +384,27 @@
    "metadata": {},
    "source": [
     "n = 4 \n",
-    "*                    ****   ****        ----*    ----*          1            0             \n",
-    "* *                  ****   ***         ---**    ---* *         2 2          1 1\n",
-    "* * *                ****   **          --***    --* * *        3 3 3        0 0 0 \n",
-    "* * * *              ****   *           -****    -* * * *       4 4 4 4      1 1 1 1 \n",
-    "  (1)                (2)    (3)          (4)        (5)            (6)          (7)"
+    "*                    * * * *   ****        ----*    ----*          1            0             \n",
+    "* *                  * * * *   ***         ---**    ---* *         2 2          1 1\n",
+    "* * *                * * * *   **          --***    --* * *        3 3 3        0 0 0 \n",
+    "* * * *              * * * *   *           -****    -* * * *       4 4 4 4      1 1 1 1 \n",
+    "  (1)                (2)    (3)          (4)        (5)            (6)          (7)\n",
+    "*                           \n",
+    "* *                  \n",
+    "* * *  \n",
+    "* * * *\n",
+    "* * *\n",
+    "* *\n",
+    "*\n",
+    "(8)\n",
+    "     *                           \n",
+    "   * * *                  \n",
+    "  * * * * *  \n",
+    "* * * * * * *\n",
+    "  * * * * *\n",
+    "    * * *\n",
+    "      *\n",
+    "     (9)"
    ]
   },
   {
@@ -416,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -509,21 +556,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter name  fgregrg\n"
+      "Enter name  adnan\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "5\n"
      ]
     }
    ],
@@ -536,15 +583,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- max min concept "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -555,19 +595,19 @@
       "name\n",
       "is\n",
       "hrkhan\n",
-      "34\n",
+      "20\n",
       "my\n",
       "name\n",
       "is\n",
       "hrkhan\n",
-      "34\n"
+      "20\n"
      ]
     }
    ],
    "source": [
-    "a=[\"my\", \"name\" ,\"is\", \"hrkhan\",34]\n",
+    "a=[\"my\", \"name\" ,\"is\", \"hrkhan\",20]\n",
     "for i in a:\n",
-    "    print(i)\n",
+    "    print(i)    \n",
     "for i in range(len(a)):\n",
     "    print(a[i])\n"
    ]
@@ -583,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -600,16 +640,15 @@
    "source": [
     "a=\"python\"\n",
     "for i in range(len(a)):    \n",
-    "    if a[i]==\"h\":\n",
-    "     break\n",
-    "    print(a[i])\n",
-    "   \n",
+    "    if(a[i]=='h'):\n",
+    "        break\n",
+    "    print(a[i])  \n",
     "print(\"you can under stand break statement\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -661,8 +700,6 @@
     "    if a[i]==\"h\":\n",
     "         pass\n",
     "         print(\"under stand pass statement!!!\")\n",
-    "          \n",
-    "    \n",
     "print(\"   you can under stand pass  statement\")"
    ]
   },
@@ -678,10 +715,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "0 1 1 2 3 5 8 13 \n",
-    "            a b c "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
