linear search , binary search , sorting

--- a/basic_question_on_python.ipynb
+++ b/basic_question_on_python.ipynb
@@ -24,7 +24,8 @@
     "- WAP to sort a list using bubble sort method\n",
     "- WAP to sort a list according to lenght of the elements\n",
     "- WAP to find the union of list\n",
-    "- WAP to find the intersection of two list\n"
+    "- WAP to find the intersection of two list\n",
+    "- WAP to search in a list  in log time \n"
    ]
   },
   {
