function , palindrome , 2 largest ,

--- a/basic_question_on_python.ipynb
+++ b/basic_question_on_python.ipynb
@@ -25,7 +25,8 @@
     "- WAP to sort a list according to lenght of the elements\n",
     "- WAP to find the union of list\n",
     "- WAP to find the intersection of two list\n",
-    "- WAP to search in a list  in log time \n"
+    "- WAP to search in a list  in log time \n",
+    "- WAP to add 1 in list  ; Input: [1,2,3] Output: [1,2,4] Explanation: The array represents the integer 123."
    ]
   },
   {
