--- a/day4.ipynb
+++ b/day4.ipynb
@@ -125,12 +125,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "binary Search --> Sorted Data [ ]"
+    "- binary Search --> Sorted Data [ ]"
    ]
   },
   {
@@ -248,15 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 17, 22, 34, 40, 45, 67]\n",
-      "42\n"
+      "[11, 17, 22, 34, 40, 45, 67]\n"
      ]
     }
    ],
@@ -264,17 +261,205 @@
     "listt =  [67, 45, 40, 34, 22, 17, 11]\n",
     "i = 0 \n",
     "n = len(listt)\n",
-    "count=0\n",
+    "\n",
     "while(i<n):\n",
     "    j=0\n",
     "    while(j <n- i -1):\n",
     "        if(listt[j]>listt[j+1]):\n",
     "            listt[j], listt[j+1] = listt[j+1], listt[j]\n",
     "        j+=1\n",
-    "        count+=1\n",
     "    i+=1\n",
-    "print(listt)\n",
-    "print(count)"
+    "print(listt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### function :-function is a block of of organised ,reuseable, code ,that is used to perform a single related action function provide better modularity for your application and heigh degree of code reusable.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Sorting and use swap function \n",
+    "def swap(i , j , l ):\n",
+    "    l[i] , l[j] = l[j] , l[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 17, 22, 34, 40, 45, 67]\n"
+     ]
+    }
+   ],
+   "source": [
+    "listt =  [67, 45, 40, 34, 22, 17, 11]\n",
+    "i = 0 \n",
+    "n = len(listt)\n",
+    "while(i<n):\n",
+    "    j=0\n",
+    "    while(j <n- i -1):\n",
+    "        if(listt[j]>listt[j+1]):\n",
+    "            swap(j ,j+1 , listt)\n",
+    "        j+=1\n",
+    "    i+=1\n",
+    "print(listt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### WAP to swap 1st and last value of the list\n",
+    "listt =  [67, 45, 40, 34, 22, 17, 11]\n",
+    "def swap(i , j, l ):\n",
+    "    l[i] , l[j] = l[j] , l[i]\n",
+    "swap(0 , len(listt)-1  , listt)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "a = random.random()\n",
+    "b = random.randrange(20, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.462245319162521"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " adna\n",
+      " a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before function \n",
+      "in function \n",
+      "2\n",
+      "after function \n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b=input()\n",
+    "print(\"before function \")\n",
+    "print(count(a , b ))\n",
+    "print(\"after function \")\n",
+    "\n",
+    "def count(a ,b):\n",
+    "    c = 0   \n",
+    "    for i in a:\n",
+    "        if i==b:\n",
+    "            c+=1\n",
+    "    print(\"in function \")\n",
+    "    return c\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- WAP to check if a str is palindrome or     ( not using function  ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1213\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input()\n",
+    "def palidrome(string ):\n",
+    "    i = 0 \n",
+    "    j = len(string) -1 \n",
+    "    \n",
+    "    while(i <=j):\n",
+    "        if(string[i]!=string[j]):\n",
+    "            return False\n",
+    "        i+=1\n",
+    "        j-=1\n",
+    "    return True\n",
+    "if(palidrome(string)):\n",
+    "    print(\"Palindrome\")\n",
+    "else:\n",
+    "    print(\"Not Palindrome\")\n",
+    "    "
    ]
   },
   {
@@ -282,7 +467,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[1 , 3, , 9 ]\n",
+    "[1 , 4 ,0 , 0 ]"
+   ]
   }
  ],
  "metadata": {
